--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </section>
             <section>
                 <img class="svg" src="/img/sea.svg">
-                <button id="mindButtonSea" onclick="myApp.executeMintNFTAndDonateSea()">Connect, Donate and  Sea NFT</button>
+                <button id="mindButtonSea" onclick="myApp.executeMintNFTAndDonateSea()">Connect, Donate and get Sea NFT</button>
             </section>
             <h2>FAQ</h2>
                 <details>
