--- a/index.html
+++ b/index.html
@@ -31,12 +31,15 @@
             <h2>Donate</h2>
             <input class="extra-margin" id="donationAmount" type="number" placeholder="Enter donation amount in ETH">
             <section>
-                <button class="" id="mintButtonTree" onclick="myApp.executeMintNFTAndDonateTree()">Connect, Donate and get Tree NFT</button>
+                <button onclick="myApp.execute()">  Connect  </button>
+            </section>
+            <section>
+                <button class="" id="mintButtonTree" onclick="myApp.executeMintNFTAndDonateTree()">Donate and get Tree NFT</button>
                 <img class="svg" src="/img/tree.svg">
             </section>
             <section>
                 <img class="svg" src="/img/sea.svg">
-                <button id="mindButtonSea" onclick="myApp.executeMintNFTAndDonateSea()">Connect, Donate and get Sea NFT</button>
+                <button id="mindButtonSea" onclick="myApp.executeMintNFTAndDonateSea()">Donate and get Sea NFT</button>
             </section>
             <h2>FAQ</h2>
                 <details>
