--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h2>Donate</h2>
             <input class="extra-margin" id="donationAmount" type="number" placeholder="Enter donation amount in ETH">
             <section>
-                <button onclick="myApp.execute()">  Connect  </button>
+                <button onclick="myApp.connect()">  Connect  </button>
             </section>
             <section>
                 <button class="" id="mintButtonTree" onclick="myApp.executeMintNFTAndDonateTree()">Donate and get Tree NFT</button>
